@@ -36,7 +36,6 @@ S3method(kwic,character)
 S3method(kwic,corpus)
 S3method(kwic,tokenizedTexts)
 S3method(lexdiv,dfm)
-S3method(lexdiv,numeric)
 S3method(metacorpus,corpus)
 S3method(metadoc,corpus)
 S3method(ndoc,corpus)
