@@ -16,7 +16,7 @@ A set of translations of the Universal Declaration of Human
 \examples{
 \dontrun{# unzip the files to a temporary directory
 FILEDIR <- tempdir()
-unzip(system.file("extdata", "encodedTextFiles.zip", package = "quantedaData"), exdir = FILEDIR)
+unzip(system.file("extdata", "encodedTextFiles.zip", package = "quanteda"), exdir = FILEDIR)
 
 # get encoding from filename
 filenames <- list.files(FILEDIR, "\\\\.txt$")
